# ETL_Ocaml

./: README.md
ETL_project/: ETL_project.opam  dune-project
ETL_project/data/: results.csv  results.db
ETL_project/lib/: Read_data.ml  Read_data.mli  Save_data.ml  Save_data.mli  dune
ETL_project/test/: dune  test_ETL_project.ml
