(lang dune 3.17)

(name ETL_project)

(generate_opam_files true)
(maintainers "N/A")
(authors "Rodrigo Anciães Patelli")
(homepage "https://github.com/RodrigoAnciaes/ETL_Ocaml")
(bug_reports "https://github.com/RodrigoAnciaes/ETL_Ocaml/issues")

(package
 (name ETL_project)
 (synopsis "Order processing tool")
 (description "Processes order data to calculate totals and taxes")
 (depends
  (ocaml (>= 4.08.0))
  csv
  sqlite3
  ocurl
  (odoc :with-doc)))
